refactor(customer): improve get seller invoices